[tool.poetry]
name = "idealista"
version = "0.1.0"
description = ""
authors = ["Angel Puerta <angelpuertadiaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
dacite = "^1.9.2"
toml = "^0.10.2"
requests = "^2.32.5"
google-api-python-client = "^2.184.0"
google-auth = "^2.41.1"
google-auth-oauthlib = "^1.2.2"
pandas = "^2.3.3"
pyyaml = "^6.0.1"
pyjwt = "^2.9.0"
joblib = "^1.5.2"
scikit-learn = "^1.7.2"
xgboost = "^3.0.5"
jupyter = "^1.1.1"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
nltk = "^3.9.2"
PyYAML = "^6.0.3"
PyJWT = "^2.10.1"
numpy = "^2.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
